--- a/css/style.css
+++ b/css/style.css
@@ -107,11 +107,11 @@ body {
 
 .wrapper {
   width: 100%;
-
   margin: 0 auto;
 }
-.container{
-   max-width: 1440px;
+
+.container {
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -721,6 +721,7 @@ body {
 
 .contacts {
   background: url("../images/contacts.jpg");
+  background-size: cover;
 }
 @media (max-width: 768px) {
   .contacts {
