--- a/#source/SCSS/style.scss
+++ b/#source/SCSS/style.scss
@@ -483,9 +483,7 @@ body {
 
 .portfolio {
     // .portfolio__title
-    @media (max-width: 450px) {
-        display: none;
-    }
+   
     &__title {
         padding: 110px 0 0 0;
         font-weight: bold;
@@ -508,7 +506,7 @@ body {
         gap: 5px;
         margin: 0 0 60px 0;
         @media (max-width: 768px) {
-            width: 445px;
+            
             margin: 0 auto 60px auto;
         }
         @media (max-width: 450px) {
@@ -530,6 +528,7 @@ body {
         color: #bdae82;
         font-size: 20px;
         line-height: 40px;
+        
     }
     &__seasons-btn:hover {
         background: #bdae82;
@@ -549,6 +548,11 @@ body {
         flex-wrap: wrap;
         justify-content: center;
         gap: 25px;
+        @media (max-width: 450px){
+          img{
+              width: 250px;
+          }
+        }
     }
 }
 
